--- a/app/templates/files.html
+++ b/app/templates/files.html
@@ -1,13 +1,12 @@
-{% extends 'base.html' %}
-
-{% block main %}
+{% extends 'base.html' %} {% block main %}
 <h1 class="page-header">Image Files</h1>
-<div class= "container">
-    <div class="flex">
-        {% for file in files %}
-        {%print(file)%}
-            <img alt="img" class="imagefile" src="{{url_for('get_image',filename=file)}}">
-        {%endfor%}
-    </div>
+<div class="container">
+  <div class="wrap">
+    <img
+      alt="pic"
+      class="imagefile"
+      src="{{url_for('get_image',filename=file)}}"
+    />
+  </div>
 </div>
 {% endblock %}
