--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,14 @@
 body {
     padding-top: 5rem;
 }
+.wrap{
+    display:flex;
+    flex-wrap:wrap;
+    padding-top: 35%;
+}
+
+.wrap imagefile{
+    width:100%;
+    height:100%;
+}
+
